<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".login.login.Loginpage">
<ImageView
    android:id="@+id/logo"
    android:layout_width="224dp"
    android:layout_height="257dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="38dp"
    android:background="@drawable/image1"
    />
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/logo"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true">
<RelativeLayout
   android:id="@+id/Layoutemail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="55dp"
    android:layout_centerHorizontal="true">
 <EditText
    android:id="@+id/txtEmail"
    android:layout_width="300dp"
    android:layout_height="60dp"
    android:layout_centerHorizontal="true"
     android:paddingLeft="10dp"
     android:textSize="12dp"
    android:background="@drawable/ic_rectangle_32"
     android:inputType="textEmailAddress"
    />

 <TextView
    android:id="@+id/email"
    android:layout_width="wrap_content"
    android:layout_height="16dp"
    android:layout_marginLeft="30dp"
    android:text="@string/email"
     android:gravity="center"
    android:textAppearance="@style/email"
     android:textSize="14dp"
    android:background="@drawable/ic_rectangle_37"
    />
 </RelativeLayout>
 <RelativeLayout
    android:id="@+id/LayoutPass"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/Layoutemail"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp">
 <EditText
     android:id="@+id/txtPassword"
     android:layout_width="300dp"
     android:layout_height="60dp"
     android:layout_centerHorizontal="true"
     android:background="@drawable/ic_rectangle_32"
     android:paddingLeft="10dp"
     android:textSize="12dp"
     android:inputType="textPassword"
     />
 <TextView

     android:id="@+id/password"
     android:layout_width="wrap_content"
     android:layout_height="16dp"
     android:layout_marginLeft="30dp"
     android:text="@string/password"
     android:textSize="14dp"
     android:textAppearance="@style/password"
     android:background="@drawable/ic_rectangle_37"
     android:gravity="center"
     />
 </RelativeLayout>
 <TextView
     android:id="@+id/tvLupapass"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
      android:layout_below="@id/LayoutPass"
     android:text="@string/lupa_passwo"
     android:textSize="14dp"
     android:textAppearance="@style/lupa_passwo"  />
 <Button
     android:id="@+id/Btnlogin"
     android:layout_width="226dp"
     android:layout_height="40dp"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="10dp"
    android:layout_below="@+id/tvLupapass"
     android:text="@string/login"
     android:background="@drawable/ic_rectangle_34"
     />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Btnlogin"
    android:orientation="horizontal"
    android:paddingTop="5dp"
   android:layout_centerHorizontal="true">
 <TextView
     android:id="@+id/tidak_punya"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/tidak_punya"
     android:textSize="14dp"
     android:textAppearance="@style/tidak_punya"
     android:gravity="top"
     />
 <TextView
     android:id="@+id/tvDaftar_"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/daftar_"
     android:textAppearance="@style/daftar_"
     android:textSize="14dp"
     />
</LinearLayout>
 </RelativeLayout>
</RelativeLayout>