<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.login.Daftar">
    <TextView
        android:id="@+id/Tvhalamandepan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="33dp"
       android:layout_marginTop="71dp"
        android:text="@string/halaman_daf"
        android:textSize="16dp"
        android:textAppearance="@style/halaman_daf"
        />
    <TextView
        android:id="@+id/Tvsilahkandaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="89dp"
        android:text="@string/silahkan_le"
        android:textAppearance="@style/silahkan_le"
        android:textSize="12dp"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tvsilahkandaftar"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/txtNama"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_rectangle_45"
            android:hint="Nama Lengkap"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_rectangle_45"
            android:layout_marginTop="25dp"
            android:hint="Email"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_rectangle_45"
            android:layout_marginTop="25dp"
            android:hint="Password"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/txtTlp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_rectangle_45"
            android:layout_marginTop="25dp"
            android:hint="Nomer Whatsapp "
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:inputType="phone"/>

        <Button
           android:id="@+id/btnDaftar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_btndaftar"
            android:text="Daftar"
           android:textAppearance="@style/daftar"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sudah punya akun?"
                android:textAppearance="@style/sudah_punya"
                android:textSize="12dp"
                />
            <TextView
               android:id="@+id/tvMasuk"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_"
                android:textAppearance="@style/masuk_"
                android:textSize="12dp"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>